1.Modify the status bar color of some pages 2.Increase the click jump of the latest episode and the next episode on the details page

--- a/app/src/main/res/layout/activity_content_list.xml
+++ b/app/src/main/res/layout/activity_content_list.xml
@@ -70,6 +70,7 @@
                         android:layout_marginEnd="@dimen/common_margin"
                         android:background="@{viewModel.isDark ? @drawable/ic_filter_night : @drawable/ic_filter_black}"
                         android:onClickListener="@{viewModel.onFilterClickListener}"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/iv_switch_grid"
                         app:layout_constraintTop_toTopOf="parent" />
